# WLLRRosteringWebsite

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
WLLRRosteringDjangoWebsite/: manage.py
WLLRRosteringDjangoWebsite/get_availability/: admin.py  apps.py  models.py  urls.py  views.py
WLLRRosteringDjangoWebsite/get_availability/migrations/: 0001_initial.py  0002_initial.py
WLLRRosteringDjangoWebsite/get_availability/templates/get_availability/: availability.html  index.html
WLLRRosteringDjangoWebsite/get_availability/templatetags/: custom_filters.py
WLLRRosteringDjangoWebsite/users/: admin.py  forms.py
WLLRRosteringDjangoWebsite/users/migrations/: 0001_initial.py
WLLRRosteringDjangoWebsite/users/templates/registration/: signup.html
WLLRRosteringDjangoWebsite/wllr_rostering_website/: asgi.py  settings.py  urls.py  views.py  wsgi.py
WLLRRosteringDjangoWebsite/wllr_rostering_website/templates/: base.html  main.html
WLLRRosteringDjangoWebsite/wllr_rostering_website/templates/wllr_rostering_website/: main.html
wllr_rostering/: asgi.py  settings.py  urls.py  wsgi.py
wllr_rostering/get_availability/: admin.py  apps.py  forms.py  grades_availabe.py  models.py  tests.py  urls.py  view_helpers.py  views.py
wllr_rostering/get_availability/migrations/: 0001_initial.py
wllr_rostering/get_availability/templates/: input_availability.html  name_error.html  thank_you.html  timetable_dates.html
wllr_rostering/templates/: index.html
