[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.0.1"
dependencies = [
  "django==5.1.*",
  "psycopg==3.2.*"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-django",
    "pytest-cov",
]
